Attempt to allow PUT to update an individual
